--- a/html/aboutme.html
+++ b/html/aboutme.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <nav>
+        <a href="aboutme.html">About Me</a>
         <a href="resume.html">My Resume</a>
         <a href="contactinfo.html">My Contact Info</a>
         <a href="classwork.html">Classwork</a>
@@ -17,15 +18,22 @@
     <h1 id="main-header">About Me!</h1>
     <h2>Written by Claire Jaeger</h2>
     
-    <p>Hello, my name is Claire. I made this website to show off my employability skills. 
-        Much of the<br>content is stuff that I've done in my Employability class, 
-        and I'm excited to put it into a website!<br>The topics that
-        are included in my website are the following:</p>
+    <p>Hello, my Name is Claire Jaeger, I'm from Parnell, IA, and I created ths website to show my job skills and to tell you a bit about myself.<br>
+        Much of the content is things that I have done and learned in my Employability Skills class. I am excited to put it into a website! The topics<br>
+        that are included in my website are the following:</p>
     <ul id="topics-list">
-        <li>Classwork</li>
-        <li>College goals</li>
-        <li>Work goals</li>
-        <li>My resume</li>
+        <li>My Resume</li>
+        <li>Contact Information</li>
+        <li>My Classwork</li>
+        <li>My Work Goals</li>
     </ul>
+    <p>Let me tell you a bit about myself. I have worked at a McDonald's for 4.5 years, 3 of which were as a Shift Manager. I am 21 years old but I have always<br>
+    been told that I'm very mature for my age. I surround myself with the right people and I have always been a pretty quiet person. Because of that, I am <br>
+    a great listener. Some fun facts about me are: I have 12 pets ranging from hedgehogs to birds to snakes, I have 10 tattoos which are pretty nerdy, I love<br>
+    cars and my dream car is an Acura NSX. I currently have a Honda Civic but am in too much debt to it. I also love video games; some of my favorites are <br>
+    Pokemon Sword, Minecraft, Story of Seasons, Animal Crossing, and Kirby's Return to Dream Land.</p>
+
+    <img src="/Personal Site/images/Pocky&Me.jpg"  alt="doge" class="center">
+
 </body>
 </html>
