--- a/html/classwork.html
+++ b/html/classwork.html
@@ -9,12 +9,41 @@
 <body>
     <nav>
         <a href="aboutme.html">About Me</a>
-        <a href="contactinfo.html">My Contact Info</a>
         <a href="resume.html">My Resume</a>
+        <a href="contactinfo.html">My Contact Info</a>
+        <a href="classwork.html">Classwork</a>
         <a href="workgoals.html">My Work Goals</a>
     </nav>
 
     <h1 id="main-header">My Classwork</h1>
     <h2>Written by Claire Jaeger</h2>
+
+    <!--I'm sorry if these pictures are grainy, I didn't know how to put them in my website without screenshotting them! Forgive me please.-->
+    <div class="row">
+        <div class="column">
+            <p><br>The first 3 projects I have listed here are from my Programming Logic class. In that class, I learned about different<br>
+                expressions, data types, structures, and so much more. I was pleasantly surprised when learning how to write pseudocode.<br>
+                It was difficult yet interesting and of course kept getting harder, but I was eager to learn new things every day.</p>
+            <img src="/Personal Site/images/Screenshot 2023-11-07 235516.png" alt="Prog Logic">
+            <img src="/Personal Site/images/Screenshot 2023-11-07 235242.png" alt="Prog Logic">
+            <img src="/Personal Site/images/Screenshot 2023-11-08 003247.png" alt="Prog Logic">
+        </div>
+        <div class="column">
+            <p>These next 3 projects are from my Employability Skills class. I really enjoyed this class because it allowed me to put my<br>
+            skills to the test. I did a mock interview with the instructor and I was very happy with my results. I really do believe this<br>
+            class helped me gain confidence for my future job. I can't wait to apply what I learned when the time comes!</p>
+            <img src="/Personal Site/images/Screenshot 2023-11-07 234857.png" alt="Employability">
+            <img src="/Personal Site/images/Screenshot 2023-11-08 002404.png" alt="Employability">
+            <img src="/Personal Site/images/Screenshot 2023-11-08 003003.png" alt="Employability">
+        </div>
+        <div class="column">
+            <p>The last 3 projects listed are from my Python class. This class was a bit tough, but I pushed through and studied at every<br>
+            chance I got. I chose these pictures because they are some short but great examples of outputs, lists, and a loop. I enjoy the<br>
+            more simple statements, but am still looking forward to improving in the future.</p>
+            <img src="/Personal Site/images/Screenshot 2023-11-08 000807.png" alt="Python">
+            <img src="/Personal Site/images/Screenshot 2023-11-08 001110.png" alt="Python">
+            <img src="/Personal Site/images/Screenshot 2023-11-08 001224.png" alt="Python">
+        </div>
+    </div>
 </body>
 </html>
