--- a/html/contactinfo.html
+++ b/html/contactinfo.html
@@ -10,6 +10,7 @@
     <nav>
         <a href="aboutme.html">About Me</a>
         <a href="resume.html">My Resume</a>
+        <a href="contactinfo.html">My Contact Info</a>
         <a href="classwork.html">Classwork</a>
         <a href="workgoals.html">My Work Goals</a>
     </nav>
@@ -18,7 +19,7 @@
     <h2>Written by Claire Jaeger</h2>
 
     <div class="container">
-        <h1 id="connect-header">Connect With Us</h1>
+        <h1 id="connect-header">Connect With Me</h1>
         <p>I would love to respond to any questions, comments, or
             concerns. Feel free to reach out!</p>
         <div class="contact-box">
@@ -58,5 +59,11 @@
             </div>
         </div>
     </div>
+    <footer>
+        <a><img src="https://upload.wikimedia.org/wikipedia/commons/0/06/Linkedin_circle_black-512.png" width="50" height="50" alt="linkedin"></a>
+        <a href="https://www.linkedin.com/feed/">Review my LinkedIn profile!</a>
+        <a><img src="https://upload.wikimedia.org/wikipedia/commons/d/d0/Facebookd.png" width="50" height="50" alt="facebook"></a>
+        <a href="https://www.facebook.com/facebook/?_rdc=1&_rdr">Add me as a friend on Facebook!</a>
+    </footer>
 </body>
 </html>
