--- a/html/resume.html
+++ b/html/resume.html
@@ -9,6 +9,7 @@
 <body>
     <nav>
         <a href="aboutme.html">About Me</a>
+        <a href="resume.html">My Resume</a>
         <a href="contactinfo.html">My Contact Info</a>
         <a href="classwork.html">Classwork</a>
         <a href="workgoals.html">My Work Goals</a>
@@ -27,7 +28,7 @@
                 <li>Responsible for assigning shift roles, counting inventory,<br>waste, 
                     and cash registers, and helping the crew in every<br>way possible.</li>
             </ul>
-            <p>Some of my skills include critical thinking, problem-solving,<br>teamwork,
+            <p>Some of my skills include critical thinking, <br>problem-solving, teamwork,
                     computer skills, and leadership.</p>
 
         </div>
