--- a/html/workgoals.html
+++ b/html/workgoals.html
@@ -9,12 +9,30 @@
 <body>
     <nav>
         <a href="aboutme.html">About Me</a>
+        <a href="resume.html">My Resume</a>
         <a href="contactinfo.html">My Contact Info</a>
         <a href="classwork.html">Classwork</a>
-        <a href="resume.html">My Resume</a>
+        <a href="workgoals.html">My Work Goals</a>
     </nav>
 
     <h1 id="main-header">My Work Goals</h1>
     <h2>Written by Claire Jaeger</h2>
+
+    <p class="work-goals">I have always been interested and curious about programming, although I never thought it would be something that I would want to do for a living. It wasn't until<br> 
+        about 3 years after graduating high school that I decided to go to college. Honestly, I thought college was a waste of money and that it wouldn't work out for me.<br>
+        The mindset I was in was very unhealthy and unmotivating, but I'm glad that I became more open-minded to try it out. I have learned so much already and I hope to<br>
+        become a software engineer one day.  A software engineer is a person who applies the engineering design process to develop, test, maintain, and evaluate computer<br>
+        software. The place I'm interested in working some day is Principal located in Des Moines, Iowa. <br><br></p>
+
+    <article>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/7/7d/Principal_-_750_Park.jpg" width="560" height="315" alt="Principal">
+    <iframe width="560" height="315" 
+        src="https://www.youtube.com/embed/O753uuutqH8?si=ThcZmx8SJehsnOKH" 
+        title="YouTube video player" 
+        frameborder="0" 
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+        allowfullscreen></iframe>
+    </article>
+
 </body>
 </html>
